# nmodl

./: .gitlab-ci.yml  .gitmodules
ci/: bb5-pr
docs/notebooks/: nmodl-nonlinear-solver.ipynb
src/: main.cpp  nmodl.hpp
src/codegen/: codegen_acc_visitor.cpp  codegen_acc_visitor.hpp  codegen_c_visitor.cpp  codegen_c_visitor.hpp  codegen_compatibility_visitor.hpp  codegen_helper_visitor.cpp  codegen_helper_visitor.hpp  codegen_info.cpp  codegen_info.hpp  codegen_naming.hpp
src/codegen/llvm/: codegen_llvm_helper_visitor.cpp  codegen_llvm_helper_visitor.hpp  codegen_llvm_visitor.cpp  codegen_llvm_visitor.hpp  llvm_ir_builder.cpp  llvm_ir_builder.hpp  llvm_utils.cpp  llvm_utils.hpp  target_platform.cpp
src/language/: code_generator.cmake  code_generator.py  nmodl.yaml
src/language/templates/ast/: ast.cpp  ast.hpp  node_class.template
src/lexer/: token_mapping.cpp
src/parser/: nmodl.yy
src/printer/: code_printer.cpp  code_printer.hpp
src/pybind/: CMakeLists.txt  pyast_BinaryOp.cpp  pyast_docstrings.hpp  pyembed.hpp  wrapper.cpp
src/solver/: CMakeLists.txt
src/visitors/: CMakeLists.txt  inline_visitor.cpp  lti_solver_visitor.cpp  lti_solver_visitor.hpp  neuron_solve_visitor.cpp  sympy_replace_solutions_visitor.cpp  sympy_replace_solutions_visitor.hpp  sympy_solver_visitor.cpp  test_visitor.cpp  test_visitor.hpp  visitor_utils.cpp  visitor_utils.hpp
test/benchmark/: cuda_driver.cpp  llvm_benchmark.cpp  nmodl-llvm-time.sh
test/unit/: CMakeLists.txt
test/unit/parser/: parser.cpp
test/unit/visitor/: node_index.cpp
(+10 files in other folders)
